# Data-analysis

./: .gitignore  README.md  main.py  pyproject.toml
Python电商购买行为分析及建模/: mian.py
bilibili-up-analysis/: README.md  main.py
data-analysis-template/: README.md  main.py
data-analysis-template/modules/: __init__.py  cleaner.py  eda.py  loader.py  modeler.py  visualizer.py
data-analysis-template/reports/: generator.py
data-analysis-template/utils/: helpers.py
didi-ab-testing/: README.md  main.py
docs/superpowers/plans/: 2026-05-16-data-analysis-template-plan.md
docs/superpowers/specs/: 2026-05-16-data-analysis-template-design.md
e-commerce-kmeans-clustering/: README.md  main.py
e-commerce-purchase-analysis/: README.md  main.py
e-commerce-user-analysis/: README.md  main.py
game-sales-analysis/: README.md  main.py
output/reports/: 销售数据分析报告_20260516_140231.md
python天气数据可视化/: README.md  hourly_plt.py  hourly_weather_data.csv  requirements.txt  week_plt.py  weekly_weather_data.csv
titanic-survival-prediction/: README.md  main.py
weather-visualization/: README.md  get_data.py  hourly_plt.py  week_plt.py
基于MySQL京东消费者行为分析/: mian.txt
基于Python的B站UP主数据可视化/: README.md  main.py  type_coins_treemap.html  type_likes_treemap.html  type_video_count_treemap.html
泰坦尼克号生存预测数据分析/: titanic_survival_prediction.py
游戏销售数据分析/: README.md  game.py
电商用户流失K-means聚类分析/: 基于Python的电商用户流失的K-means分析.py
电商用户特征数据分析/: README.md
